fixed alignment of content within post container

--- a/app/assets/stylesheets/pages/index_post_page.scss
+++ b/app/assets/stylesheets/pages/index_post_page.scss
@@ -1,7 +1,7 @@
 .post {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: flex-center;
   justify-content: center;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   height: 53%;
@@ -9,7 +9,7 @@
   border-radius: 10px;
   background-color: white;
   margin-bottom: 10px;
-  padding-left: 20px;
+  padding: 3%;
   ul {
     list-style: none;
     padding-left: 0px;
@@ -27,7 +27,7 @@
   margin-top: 10px;
   //height: 600px;
   width: 100vw;
-  overflow: scroll;
+  overflow: auto;
   p {
     font-size: 12px;
   }
@@ -70,8 +70,9 @@
 }
 .attached-doc {
   display: flex;
-  flex-direction: column;
-  width: 90%;
+  width: 100%;
+  align-content: center;
+  flex-wrap: wrap;
 }
 .post-img {
   // height: 60%;
@@ -120,7 +121,7 @@
   display: flex;
   padding: 5px;
   vertical-align: center;
-  justify-content: flex-end;
+  align-content: end;
   font-size: 11px;
 }
 
